2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* VBNetBinding.addin.xml: Bump MD version.

2008-11-04  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/CodeGenerationPanelWidget.cs: Disable CompileTarget and MainClass
	setting when project.IsLibraryBasedProjectType. Prevents messing up
	ASP.NET and Moonlight projects.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* VBNetBinding.addin.xml: Removed vb ambience.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* VBNetBinding.addin.xml: fixed 'Bug 399737 - Code completion busted for
	referenced assemblies that are not in GAC, are outside of the
	solution, and which are referenced by other non-GAC outside
	referenced assemblies'.

2008-10-01  Michael Hutchinson <mhutchinson@novell.com> 

	* VBBindingCompilerServices.cs: Track API.

2008-10-01  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* VBBindingCompilerServices.cs: GenerateOptions: Output the actual
	  additional parameters to the compiler command, not the length of
	  the additional parameters.

2008-09-26  Michael Hutchinson <mhutchinson@novell.com> 

	* Parser/DomParser.cs: Track API.

2008-09-16  Lluis Sanchez Gual <lluis@novell.com> 

	* VBNetBinding.mdp, md1format.xml, Makefile.am: Add missing file.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* VBNetBinding.mdp, gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.VBNetBinding.CodeGenerationPanelWidget.cs:
	  Updated generated code.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CodeGenerationPanelWidget.cs: Track api changes.

2008-09-10  Mike Krüger <mkrueger@novell.com> 

	* Parser/DomParser.cs: Changed compilation unit/document meta
	  information interface.

2008-09-09  Mike Krüger <mkrueger@novell.com> 

	* Parser/DomParser.cs: Some changes caused by interface changes.

2008-07-29  Mike Krüger <mkrueger@novell.com> 

	* Gui/CodeGenerationPanelWidget.cs, Parser/Parser.cs,
	  Parser/DomParser.cs, Parser/VBNetVisitor.cs, Parser/Resolver.cs,