@@ -1,3 +1,7 @@
+2008-11-20  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Gui/CodeGenerationPanelWidget.cs: Fix NRE.
+
 2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* VBNetBinding.addin.xml: Bump MD version.
